<resources>
    <string name="app_name">Concesionario</string>

    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>
    <string name="msg_correo">Campo para ingresar su correo</string>
    <string name="msg_clave">Campo para ingresar su contraseña</string>
    <string name="msg_btLogin">Boton para hacer login al app</string>
    <string name="msg_btRegister">Boton para registrarse al app</string>
    <string name="msg_fallo_registro">Fallo el registro del usuario</string>
    <string name="msg_fallo_login">Fallo el login del usuario</string>

    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_concesionario">Concesionario de Carros</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="msg_modelo">Modelo del Carro</string>
    <string name="msg_año">Año del Carro</string>
    <string name="msg_marca">Marca del Carro</string>
    <string name="msg_motor">Motor del Carro</string>
    <string name="msg_precio">Precio del Carro</string>
    <string name="msg_cantidadAsientos">Cantidad de asientos del Carro</string>
    <string name="msg_tipoCajaCambios">Tipo de caja de cambios del Carro</string>
    <string name="msg_telefono">Telefono del Carro</string>

    <string name="msg_concesionario_add">Carro Agregado</string>
    <string name="bt_add_concesionario">Agregar Carro</string>
</resources>