<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_concesionario">

    <fragment
        android:id="@+id/nav_concesionario"
        android:name="com.concesionario.ui.concesionario.ConcesionarioFragment"
        android:label="@string/menu_concesionario"
        tools:layout="@layout/fragment_concesionario" >
        <action
            android:id="@+id/action_nav_concesionario_to_addConcesionarioFragment"
            app:destination="@id/nav_addConcesionario" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.concesionario.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.concesionario.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_addConcesionario"
        android:name="com.concesionario.ui.concesionario.AddConcesionarioFragment"
        android:label="fragment_add_concesionario"
        tools:layout="@layout/fragment_add_concesionario" >
        <action
            android:id="@+id/action_addConcesionarioFragment_to_nav_concesionario"
            app:destination="@id/nav_concesionario" />
    </fragment>
</navigation>